# hoodTV

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  replit.md  replit.nix
artifacts/api-server/: package.json
artifacts/api-server-py/: main.py  requirements.txt
artifacts/api-server-py/routers/: moviebox.py  nontongo.py  proxy.py  stream.py  videasy.py  vidsrc.py  ytproxy.py
artifacts/api-server-py/videasy_wasm/: module.wasm  package-lock.json  package.json  runner.cjs
artifacts/api-server-py/vidlink_wasm/: package-lock.json  package.json  runner.cjs  runner.mjs
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/routes/: fzmovies.ts  index.ts  moviebox.ts  proxy.ts
artifacts/go-proxy/: go.mod  main.go
artifacts/hoodtv/: index.html  package.json  vite.config.ts
artifacts/hoodtv/.replit-artifact/: artifact.toml
artifacts/hoodtv/src/: App.tsx  index.css
artifacts/hoodtv/src/components/: ContentRow.tsx  HeroSection.tsx  MediaCard.tsx  Navbar.tsx  SpotlightSection.tsx  VideoPlayer.tsx
artifacts/rust-health/: Cargo.toml
artifacts/rust-health/src/: main.rs
artifacts/scala-gateway/: Gateway.scala
artifacts/scala-gateway/.bsp/: scala-cli.json
artifacts/scala-gateway/.scala-build/: ide-envs.json  ide-inputs.json
artifacts/yt-service/: package.json
artifacts/yt-service/src/: index.js
attached_assets/: Pasted--workspace-git-push-origin-main-Enumerating-objects-275_1775728056791.txt
docker/: nginx.conf  supervisord.conf
(+34 files in other folders)
