[package]
name = "rust-health"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-health"
path = "src/main.rs"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
